# flowforge-linux

CLI/: CMakeLists.txt
CLI/Server/: CMakeLists.txt  Server.cpp
Core/: CMakeLists.txt  Plugin.hpp  PluginWrapper.cpp  PluginWrapper.hpp  TUN.cpp  TUN.hpp
Core/Client/: CMakeLists.txt  Client.cpp  DNS.cpp  DNS.hpp  FirewallRules.cpp  FirewallRules.hpp  NetWatcher.cpp  NetWatcher.hpp  Network.cpp  Network.hpp  NetworkRollback.cpp  NetworkRollback.hpp
Core/Server/: CMakeLists.txt  NetWatcher.cpp  NetWatcher.hpp  Network.cpp  Network.hpp  NetworkRollback.cpp  NetworkRollback.hpp  Server.cpp  Server.hpp
